# mini-siem-frontend

./: README.md  pyproject.toml
src/mini_siem_frontend/: __init__.py
src/mini_siem_frontend/templates/: base.html  search.html
src/mini_siem_frontend/templates/partials/: events_table.html
